# PDE_SOLVER

./: README.md  analytical_laplace.m  main  main.cpp  performance.md  plot.py  results.csv  sample.ipynb
input/: input_file.json  mesh1.csv  mesh2.csv
python_files/: plot.ipynb  plot.py
results/: results.csv  unit_test_results.csv
source/: CMakeLists.txt  boundary_conditions.cpp  iterative_schemes.cpp  iterative_schemes.h  main.cpp  miscellaneous.h  pde_solver.cpp  pde_solver.h  plot.py  write_plot.cpp  write_plot.h
source/lib/: iterative_schemes.h  pde_solver.h
